// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HTML presentation themes > renders a dense Staff software engineering one-page theme 1`] = `
"<!doctype html>
<html lang="en-US">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>One Page Example Resume</title>
    <style>
      :root {
        color-scheme: light;
        --rf-page-width: 8.5in;
        --rf-page-height: 11in;
        --rf-page-margin: 0.55in;
        --rf-font-family: Aptos, Arial, Helvetica, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
        --rf-font-size: 10pt;
        --rf-small-size: 8.35pt;
        --rf-h1-size: 21pt;
        --rf-h2-size: 8.7pt;
        --rf-h3-size: 10.05pt;
        --rf-line-height: 1.3;
        --rf-heading-line-height: 1.08;
        --rf-regular-weight: 400;
        --rf-medium-weight: 600;
        --rf-bold-weight: 700;
        --rf-letter-spacing: 0;
        --rf-color-background: #ffffff;
        --rf-color-text: #111111;
        --rf-color-muted: #404040;
        --rf-color-subtle: #737373;
        --rf-color-accent: #262626;
        --rf-color-link: #1f2937;
        --rf-color-rule: #b8b8b8;
        --rf-header-gap: 0.11in;
        --rf-contact-gap: 0.055in;
        --rf-section-title-gap: 0.045in;
        --rf-list-indent: 0.14in;
        --rf-section-gap: 0.1in;
        --rf-item-gap: 0.055in;
        --rf-list-gap: 0.01in;
        --rf-paragraph-gap: 0.022in;
        --rf-density-font-scale: 0.955;
        --rf-section-rule-width: 0.55pt;
        --rf-section-rule-style: solid;
        --rf-item-rule-width: 0;
        --rf-item-rule-style: solid;
        --rf-rule-radius: 0;
        --rf-screen-background: #f3f3f0;
        --rf-screen-padding: 32px 24px;
        --rf-screen-shadow: 0 18px 50px rgb(17 17 17 / 0.12);
      }

      @page {
        size: 8.5in 11in;
        margin: 0.55in;
      }

      * {
        box-sizing: border-box;
      }

      html,
      body {
        margin: 0;
        min-height: 100%;
        background: var(--rf-color-background);
      }

      body {
        color: var(--rf-color-text);
        font-family: var(--rf-font-family);
        font-size: calc(var(--rf-font-size) * var(--rf-density-font-scale));
        font-weight: var(--rf-regular-weight);
        line-height: var(--rf-line-height);
      }

      .resume {
        width: 100%;
        max-width: var(--rf-page-width);
        margin: 0 auto;
        padding: var(--rf-page-margin);
        background: var(--rf-color-background);
      }

      .resume[data-page-target="one-page"] {
        print-color-adjust: exact;
        -webkit-print-color-adjust: exact;
      }

      h1,
      h2,
      h3,
      p {
        margin: 0;
      }

      h1,
      h2,
      h3 {
        color: var(--rf-color-text);
        font-weight: var(--rf-bold-weight);
        letter-spacing: var(--rf-letter-spacing);
        line-height: var(--rf-heading-line-height);
      }

      h1 {
        font-size: var(--rf-h1-size);
      }

      h2 {
        border-bottom: var(--rf-section-rule-width) var(--rf-section-rule-style) var(--rf-color-accent);
        color: var(--rf-color-accent);
        font-size: var(--rf-h2-size);
        padding-bottom: var(--rf-section-title-gap);
        text-transform: uppercase;
      }

      h3 {
        font-size: var(--rf-h3-size);
      }

      a {
        color: var(--rf-color-link);
        text-decoration: underline;
        text-underline-offset: 0.08em;
      }

      address {
        font-style: normal;
      }

      ul {
        margin: var(--rf-paragraph-gap) 0 0;
        padding-left: var(--rf-list-indent);
      }

      li + li {
        margin-top: var(--rf-list-gap);
      }

      .resume-highlights {
        list-style: none;
        padding-left: 0;
      }

      .resume-highlights li {
        display: grid;
        gap: 0.055in;
        grid-template-columns: auto 1fr;
      }

      .resume-header {
        display: grid;
        gap: var(--rf-contact-gap);
        margin-bottom: var(--rf-header-gap);
      }

      .resume-label,
      .resume-contact,
      .resume-entry-meta,
      .resume-entry-link {
        color: var(--rf-color-muted);
      }

      .resume-summary,
      .resume-section-summary,
      .resume-entry p {
        margin-top: var(--rf-paragraph-gap);
      }

      .resume-section {
        break-inside: avoid-page;
        margin-top: var(--rf-section-gap);
      }

      .resume-section > h2 + * {
        margin-top: var(--rf-item-gap);
      }

      .resume-entry {
        break-inside: avoid-page;
        border-top: var(--rf-item-rule-width) var(--rf-item-rule-style) var(--rf-color-rule);
      }

      .resume-entry + .resume-entry {
        margin-top: var(--rf-item-gap);
      }

      .resume-entry-header {
        align-items: baseline;
        display: flex;
        gap: var(--rf-contact-gap);
        justify-content: space-between;
      }

      .resume-entry-meta,
      .resume-entry-link,
      .resume-contact {
        font-size: var(--rf-small-size);
      }

      .resume-skills-list {
        columns: 2;
        list-style-position: outside;
      }

      .resume[data-theme="staff-software-engineering"] {
        border-top: 1.5pt solid var(--rf-color-text);
      }

      .resume[data-theme="staff-software-engineering"] .resume-header {
        align-items: start;
        border-bottom: 0.7pt solid var(--rf-color-rule);
        column-gap: 0.28in;
        grid-template-columns: minmax(0, 1fr) auto;
        margin-bottom: 0;
        padding-bottom: 0.11in;
        row-gap: 0.025in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-header h1 {
        grid-column: 1;
      }

      .resume[data-theme="staff-software-engineering"] .resume-label {
        color: var(--rf-color-text);
        font-size: 10.2pt;
        font-weight: var(--rf-medium-weight);
        grid-column: 1;
      }

      .resume[data-theme="staff-software-engineering"] .resume-contact {
        display: grid;
        gap: 0.018in;
        grid-column: 2;
        grid-row: 1 / span 2;
        justify-items: end;
        line-height: 1.22;
        text-align: right;
      }

      .resume[data-theme="staff-software-engineering"] .resume-contact .resume-separator {
        display: none;
      }

      .resume[data-theme="staff-software-engineering"] .resume-summary {
        color: var(--rf-color-text);
        font-weight: var(--rf-medium-weight);
        grid-column: 1 / -1;
        max-width: 6.55in;
      }

      .resume[data-theme="staff-software-engineering"] h2 {
        align-items: center;
        border-bottom: 0;
        display: grid;
        gap: 0.09in;
        grid-template-columns: auto 1fr;
        padding-bottom: 0;
      }

      .resume[data-theme="staff-software-engineering"] h2::after {
        border-top: var(--rf-section-rule-width) var(--rf-section-rule-style) var(--rf-color-rule);
        content: "";
      }

      .resume[data-theme="staff-software-engineering"] .resume-section > h2 + * {
        margin-top: 0.055in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-header {
        display: grid;
        gap: 0.08in;
        grid-template-columns: minmax(0, 1fr) auto;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-header > div {
        align-items: baseline;
        column-gap: 0.14in;
        display: grid;
        grid-template-columns: auto minmax(0, 1fr);
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-meta {
        justify-self: end;
        text-align: right;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-header--with-link > div {
        display: block;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-header--with-link .resume-entry-meta {
        justify-self: start;
        margin-top: 0.012in;
        text-align: left;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry p {
        color: var(--rf-color-text);
      }

      .resume[data-theme="staff-software-engineering"] .resume-bullet {
        color: var(--rf-color-muted);
      }

      .resume[data-theme="staff-software-engineering"] .resume-highlights li {
        gap: 0.045in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-section--skills .resume-entry {
        align-items: start;
        border-top: 0;
        display: grid;
        grid-template-columns: 1.15in minmax(0, 1fr);
        column-gap: 0.16in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-section--skills .resume-entry + .resume-entry {
        margin-top: 0.045in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-skill-group h3 {
        color: var(--rf-color-muted);
        font-size: var(--rf-small-size);
        text-transform: uppercase;
      }

      .resume[data-theme="staff-software-engineering"] .resume-skills-list {
        columns: unset;
        display: grid;
        grid-template-columns: repeat(2, minmax(0, 1fr));
        margin-top: 0;
      }

      @media screen and (max-width: 560px) {
        .resume[data-theme="staff-software-engineering"] .resume-header,
        .resume[data-theme="staff-software-engineering"] .resume-entry-header,
        .resume[data-theme="staff-software-engineering"] .resume-entry-header > div,
        .resume[data-theme="staff-software-engineering"] .resume-section--skills .resume-entry,
        .resume[data-theme="staff-software-engineering"] .resume-skills-list {
          display: block;
        }

        .resume[data-theme="staff-software-engineering"] .resume-contact,
        .resume[data-theme="staff-software-engineering"] .resume-entry-meta {
          justify-items: start;
          text-align: left;
        }

        .resume[data-theme="staff-software-engineering"] .resume-contact .resume-separator {
          display: inline;
        }

        .resume[data-theme="staff-software-engineering"] .resume-entry-meta {
          justify-self: start;
          width: 100%;
        }
      }

      @media screen {
        .resume[data-theme="staff-software-engineering"] {
          min-height: var(--rf-page-height);
        }
      }


      @media screen {
        body {
          background: var(--rf-screen-background);
          padding: var(--rf-screen-padding);
        }

        .resume {
          box-shadow: var(--rf-screen-shadow);
        }
      }

      @media print {
        html,
        body {
          background: var(--rf-color-background);
        }

        body {
          padding: 0;
        }

        .resume {
          max-width: none;
          padding: 0;
        }
      }
    </style>
  </head>
  <body>
    <main class="resume" aria-label="One Page Person resume" data-theme="staff-software-engineering" data-density="compact" data-page-size="letter" data-page-target="one-page">
      <header class="resume-header">
        <h1>One Page Person</h1>
        <p class="resume-label">Product Engineer</p>
        <address class="resume-contact" aria-label="Contact"><a href="mailto:one@example.com">one@example.com</a><span class="resume-separator" aria-hidden="true"> | </span><a href="https://one.example.com">one.example.com</a><span class="resume-separator" aria-hidden="true"> | </span><span>San Francisco, CA</span></address>
        <p class="resume-summary">Builds focused product systems with typed content workflows.</p>
      </header>
      <section id="experience" class="resume-section resume-section--experience" aria-labelledby="experience-heading" data-section-kind="experience" data-density="compact">
        <h2 id="experience-heading">Experience</h2>

        <article id="compact-systems-lead" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Compact Systems</h3>
              <p class="resume-entry-meta"><span>Lead Engineer at Compact Systems</span><span class="resume-separator" aria-hidden="true"> | </span><span>San Francisco, CA</span><span class="resume-separator" aria-hidden="true"> | </span><span><time datetime="2023">2023</time><span aria-hidden="true"> - </span><span>Present</span></span></p>
            </div>

          </header>
          <p>Led a small team building resume authoring and rendering infrastructure.</p>
          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Shipped a schema-first import path for Markdown-authored resumes.</span></li><li><span class="resume-bullet" aria-hidden="true">•</span><span>Kept the one-page variant concise through section priority metadata.</span></li></ul>
        </article>
      </section>
      <section id="skills" class="resume-section resume-section--skills" aria-labelledby="skills-heading" data-section-kind="skills" data-density="compact">
        <h2 id="skills-heading">Skills</h2>

        <article id="languages" class="resume-entry resume-skill-group">
          <h3>Languages</h3>
          <ul class="resume-skills-list" aria-label="Languages skills">
            <li>TypeScript</li><li>Python</li>
          </ul>
        </article>
        <article id="practices" class="resume-entry resume-skill-group">
          <h3>Practices</h3>
          <ul class="resume-skills-list" aria-label="Practices skills">
            <li>Schema design</li><li>Content validation</li>
          </ul>
        </article>
      </section>
    </main>
  </body>
</html>"
`;

exports[`HTML presentation themes > renders a one-page baseline theme with print-first CSS and semantic HTML 1`] = `
"<!doctype html>
<html lang="en-US">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>One Page Example Resume</title>
    <style>
      :root {
        color-scheme: light;
        --rf-page-width: 8.5in;
        --rf-page-height: 11in;
        --rf-page-margin: 0.55in;
        --rf-font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
        --rf-font-size: 10.5pt;
        --rf-small-size: 8.8pt;
        --rf-h1-size: 20pt;
        --rf-h2-size: 9.5pt;
        --rf-h3-size: 10.5pt;
        --rf-line-height: 1.35;
        --rf-heading-line-height: 1.12;
        --rf-regular-weight: 400;
        --rf-medium-weight: 600;
        --rf-bold-weight: 700;
        --rf-letter-spacing: 0;
        --rf-color-background: #ffffff;
        --rf-color-text: #111827;
        --rf-color-muted: #4b5563;
        --rf-color-subtle: #6b7280;
        --rf-color-accent: #0f766e;
        --rf-color-link: #0f766e;
        --rf-color-rule: #d1d5db;
        --rf-header-gap: 0.14in;
        --rf-contact-gap: 0.08in;
        --rf-section-title-gap: 0.08in;
        --rf-list-indent: 0.16in;
        --rf-section-gap: 0.135in;
        --rf-item-gap: 0.075in;
        --rf-list-gap: 0.016in;
        --rf-paragraph-gap: 0.03in;
        --rf-density-font-scale: 0.96;
        --rf-section-rule-width: 0.8pt;
        --rf-section-rule-style: solid;
        --rf-item-rule-width: 0;
        --rf-item-rule-style: solid;
        --rf-rule-radius: 0;
        --rf-screen-background: #f3f4f6;
        --rf-screen-padding: 24px;
        --rf-screen-shadow: 0 12px 30px rgb(15 23 42 / 0.12);
      }

      @page {
        size: 8.5in 11in;
        margin: 0.55in;
      }

      * {
        box-sizing: border-box;
      }

      html,
      body {
        margin: 0;
        min-height: 100%;
        background: var(--rf-color-background);
      }

      body {
        color: var(--rf-color-text);
        font-family: var(--rf-font-family);
        font-size: calc(var(--rf-font-size) * var(--rf-density-font-scale));
        font-weight: var(--rf-regular-weight);
        line-height: var(--rf-line-height);
      }

      .resume {
        width: 100%;
        max-width: var(--rf-page-width);
        margin: 0 auto;
        padding: var(--rf-page-margin);
        background: var(--rf-color-background);
      }

      .resume[data-page-target="one-page"] {
        print-color-adjust: exact;
        -webkit-print-color-adjust: exact;
      }

      h1,
      h2,
      h3,
      p {
        margin: 0;
      }

      h1,
      h2,
      h3 {
        color: var(--rf-color-text);
        font-weight: var(--rf-bold-weight);
        letter-spacing: var(--rf-letter-spacing);
        line-height: var(--rf-heading-line-height);
      }

      h1 {
        font-size: var(--rf-h1-size);
      }

      h2 {
        border-bottom: var(--rf-section-rule-width) var(--rf-section-rule-style) var(--rf-color-accent);
        color: var(--rf-color-accent);
        font-size: var(--rf-h2-size);
        padding-bottom: var(--rf-section-title-gap);
        text-transform: uppercase;
      }

      h3 {
        font-size: var(--rf-h3-size);
      }

      a {
        color: var(--rf-color-link);
        text-decoration: underline;
        text-underline-offset: 0.08em;
      }

      address {
        font-style: normal;
      }

      ul {
        margin: var(--rf-paragraph-gap) 0 0;
        padding-left: var(--rf-list-indent);
      }

      li + li {
        margin-top: var(--rf-list-gap);
      }

      .resume-highlights {
        list-style: none;
        padding-left: 0;
      }

      .resume-highlights li {
        display: grid;
        gap: 0.055in;
        grid-template-columns: auto 1fr;
      }

      .resume-header {
        display: grid;
        gap: var(--rf-contact-gap);
        margin-bottom: var(--rf-header-gap);
      }

      .resume-label,
      .resume-contact,
      .resume-entry-meta,
      .resume-entry-link {
        color: var(--rf-color-muted);
      }

      .resume-summary,
      .resume-section-summary,
      .resume-entry p {
        margin-top: var(--rf-paragraph-gap);
      }

      .resume-section {
        break-inside: avoid-page;
        margin-top: var(--rf-section-gap);
      }

      .resume-section > h2 + * {
        margin-top: var(--rf-item-gap);
      }

      .resume-entry {
        break-inside: avoid-page;
        border-top: var(--rf-item-rule-width) var(--rf-item-rule-style) var(--rf-color-rule);
      }

      .resume-entry + .resume-entry {
        margin-top: var(--rf-item-gap);
      }

      .resume-entry-header {
        align-items: baseline;
        display: flex;
        gap: var(--rf-contact-gap);
        justify-content: space-between;
      }

      .resume-entry-meta,
      .resume-entry-link,
      .resume-contact {
        font-size: var(--rf-small-size);
      }

      .resume-skills-list {
        columns: 2;
        list-style-position: outside;
      }



      @media screen {
        body {
          background: var(--rf-screen-background);
          padding: var(--rf-screen-padding);
        }

        .resume {
          box-shadow: var(--rf-screen-shadow);
        }
      }

      @media print {
        html,
        body {
          background: var(--rf-color-background);
        }

        body {
          padding: 0;
        }

        .resume {
          max-width: none;
          padding: 0;
        }
      }
    </style>
  </head>
  <body>
    <main class="resume" aria-label="One Page Person resume" data-theme="baseline" data-density="compact" data-page-size="letter" data-page-target="one-page">
      <header class="resume-header">
        <h1>One Page Person</h1>
        <p class="resume-label">Product Engineer</p>
        <address class="resume-contact" aria-label="Contact"><a href="mailto:one@example.com">one@example.com</a><span class="resume-separator" aria-hidden="true"> | </span><a href="https://one.example.com">one.example.com</a><span class="resume-separator" aria-hidden="true"> | </span><span>San Francisco, CA</span></address>
        <p class="resume-summary">Builds focused product systems with typed content workflows.</p>
      </header>
      <section id="experience" class="resume-section resume-section--experience" aria-labelledby="experience-heading" data-section-kind="experience" data-density="compact">
        <h2 id="experience-heading">Experience</h2>

        <article id="compact-systems-lead" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Compact Systems</h3>
              <p class="resume-entry-meta"><span>Lead Engineer at Compact Systems</span><span class="resume-separator" aria-hidden="true"> | </span><span>San Francisco, CA</span><span class="resume-separator" aria-hidden="true"> | </span><span><time datetime="2023">2023</time><span aria-hidden="true"> - </span><span>Present</span></span></p>
            </div>

          </header>
          <p>Led a small team building resume authoring and rendering infrastructure.</p>
          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Shipped a schema-first import path for Markdown-authored resumes.</span></li><li><span class="resume-bullet" aria-hidden="true">•</span><span>Kept the one-page variant concise through section priority metadata.</span></li></ul>
        </article>
      </section>
      <section id="skills" class="resume-section resume-section--skills" aria-labelledby="skills-heading" data-section-kind="skills" data-density="compact">
        <h2 id="skills-heading">Skills</h2>

        <article id="languages" class="resume-entry resume-skill-group">
          <h3>Languages</h3>
          <ul class="resume-skills-list" aria-label="Languages skills">
            <li>TypeScript</li><li>Python</li>
          </ul>
        </article>
        <article id="practices" class="resume-entry resume-skill-group">
          <h3>Practices</h3>
          <ul class="resume-skills-list" aria-label="Practices skills">
            <li>Schema design</li><li>Content validation</li>
          </ul>
        </article>
      </section>
    </main>
  </body>
</html>"
`;

exports[`HTML presentation themes > renders a restrained Staff software engineering two-page theme 1`] = `
"<!doctype html>
<html lang="en-US">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Two Page Example Resume</title>
    <style>
      :root {
        color-scheme: light;
        --rf-page-width: 8.5in;
        --rf-page-height: 11in;
        --rf-page-margin: 0.55in;
        --rf-font-family: Aptos, Arial, Helvetica, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
        --rf-font-size: 10pt;
        --rf-small-size: 8.35pt;
        --rf-h1-size: 21pt;
        --rf-h2-size: 8.7pt;
        --rf-h3-size: 10.05pt;
        --rf-line-height: 1.3;
        --rf-heading-line-height: 1.08;
        --rf-regular-weight: 400;
        --rf-medium-weight: 600;
        --rf-bold-weight: 700;
        --rf-letter-spacing: 0;
        --rf-color-background: #ffffff;
        --rf-color-text: #111111;
        --rf-color-muted: #404040;
        --rf-color-subtle: #737373;
        --rf-color-accent: #262626;
        --rf-color-link: #1f2937;
        --rf-color-rule: #b8b8b8;
        --rf-header-gap: 0.11in;
        --rf-contact-gap: 0.055in;
        --rf-section-title-gap: 0.045in;
        --rf-list-indent: 0.14in;
        --rf-section-gap: 0.14in;
        --rf-item-gap: 0.08in;
        --rf-list-gap: 0.014in;
        --rf-paragraph-gap: 0.03in;
        --rf-density-font-scale: 1;
        --rf-section-rule-width: 0.55pt;
        --rf-section-rule-style: solid;
        --rf-item-rule-width: 0;
        --rf-item-rule-style: solid;
        --rf-rule-radius: 0;
        --rf-screen-background: #f3f3f0;
        --rf-screen-padding: 32px 24px;
        --rf-screen-shadow: 0 18px 50px rgb(17 17 17 / 0.12);
      }

      @page {
        size: 8.5in 11in;
        margin: 0.55in;
      }

      * {
        box-sizing: border-box;
      }

      html,
      body {
        margin: 0;
        min-height: 100%;
        background: var(--rf-color-background);
      }

      body {
        color: var(--rf-color-text);
        font-family: var(--rf-font-family);
        font-size: calc(var(--rf-font-size) * var(--rf-density-font-scale));
        font-weight: var(--rf-regular-weight);
        line-height: var(--rf-line-height);
      }

      .resume {
        width: 100%;
        max-width: var(--rf-page-width);
        margin: 0 auto;
        padding: var(--rf-page-margin);
        background: var(--rf-color-background);
      }

      .resume[data-page-target="two-page"] {
        print-color-adjust: exact;
        -webkit-print-color-adjust: exact;
      }

      h1,
      h2,
      h3,
      p {
        margin: 0;
      }

      h1,
      h2,
      h3 {
        color: var(--rf-color-text);
        font-weight: var(--rf-bold-weight);
        letter-spacing: var(--rf-letter-spacing);
        line-height: var(--rf-heading-line-height);
      }

      h1 {
        font-size: var(--rf-h1-size);
      }

      h2 {
        border-bottom: var(--rf-section-rule-width) var(--rf-section-rule-style) var(--rf-color-accent);
        color: var(--rf-color-accent);
        font-size: var(--rf-h2-size);
        padding-bottom: var(--rf-section-title-gap);
        text-transform: uppercase;
      }

      h3 {
        font-size: var(--rf-h3-size);
      }

      a {
        color: var(--rf-color-link);
        text-decoration: underline;
        text-underline-offset: 0.08em;
      }

      address {
        font-style: normal;
      }

      ul {
        margin: var(--rf-paragraph-gap) 0 0;
        padding-left: var(--rf-list-indent);
      }

      li + li {
        margin-top: var(--rf-list-gap);
      }

      .resume-highlights {
        list-style: none;
        padding-left: 0;
      }

      .resume-highlights li {
        display: grid;
        gap: 0.055in;
        grid-template-columns: auto 1fr;
      }

      .resume-header {
        display: grid;
        gap: var(--rf-contact-gap);
        margin-bottom: var(--rf-header-gap);
      }

      .resume-label,
      .resume-contact,
      .resume-entry-meta,
      .resume-entry-link {
        color: var(--rf-color-muted);
      }

      .resume-summary,
      .resume-section-summary,
      .resume-entry p {
        margin-top: var(--rf-paragraph-gap);
      }

      .resume-section {
        break-inside: avoid-page;
        margin-top: var(--rf-section-gap);
      }

      .resume-section > h2 + * {
        margin-top: var(--rf-item-gap);
      }

      .resume-entry {
        break-inside: avoid-page;
        border-top: var(--rf-item-rule-width) var(--rf-item-rule-style) var(--rf-color-rule);
      }

      .resume-entry + .resume-entry {
        margin-top: var(--rf-item-gap);
      }

      .resume-entry-header {
        align-items: baseline;
        display: flex;
        gap: var(--rf-contact-gap);
        justify-content: space-between;
      }

      .resume-entry-meta,
      .resume-entry-link,
      .resume-contact {
        font-size: var(--rf-small-size);
      }

      .resume-skills-list {
        columns: 2;
        list-style-position: outside;
      }

      .resume[data-theme="staff-software-engineering"] {
        border-top: 1.5pt solid var(--rf-color-text);
      }

      .resume[data-theme="staff-software-engineering"] .resume-header {
        align-items: start;
        border-bottom: 0.7pt solid var(--rf-color-rule);
        column-gap: 0.28in;
        grid-template-columns: minmax(0, 1fr) auto;
        margin-bottom: 0;
        padding-bottom: 0.11in;
        row-gap: 0.025in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-header h1 {
        grid-column: 1;
      }

      .resume[data-theme="staff-software-engineering"] .resume-label {
        color: var(--rf-color-text);
        font-size: 10.2pt;
        font-weight: var(--rf-medium-weight);
        grid-column: 1;
      }

      .resume[data-theme="staff-software-engineering"] .resume-contact {
        display: grid;
        gap: 0.018in;
        grid-column: 2;
        grid-row: 1 / span 2;
        justify-items: end;
        line-height: 1.22;
        text-align: right;
      }

      .resume[data-theme="staff-software-engineering"] .resume-contact .resume-separator {
        display: none;
      }

      .resume[data-theme="staff-software-engineering"] .resume-summary {
        color: var(--rf-color-text);
        font-weight: var(--rf-medium-weight);
        grid-column: 1 / -1;
        max-width: 6.55in;
      }

      .resume[data-theme="staff-software-engineering"] h2 {
        align-items: center;
        border-bottom: 0;
        display: grid;
        gap: 0.09in;
        grid-template-columns: auto 1fr;
        padding-bottom: 0;
      }

      .resume[data-theme="staff-software-engineering"] h2::after {
        border-top: var(--rf-section-rule-width) var(--rf-section-rule-style) var(--rf-color-rule);
        content: "";
      }

      .resume[data-theme="staff-software-engineering"] .resume-section > h2 + * {
        margin-top: 0.055in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-header {
        display: grid;
        gap: 0.08in;
        grid-template-columns: minmax(0, 1fr) auto;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-header > div {
        align-items: baseline;
        column-gap: 0.14in;
        display: grid;
        grid-template-columns: auto minmax(0, 1fr);
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-meta {
        justify-self: end;
        text-align: right;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-header--with-link > div {
        display: block;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry-header--with-link .resume-entry-meta {
        justify-self: start;
        margin-top: 0.012in;
        text-align: left;
      }

      .resume[data-theme="staff-software-engineering"] .resume-entry p {
        color: var(--rf-color-text);
      }

      .resume[data-theme="staff-software-engineering"] .resume-bullet {
        color: var(--rf-color-muted);
      }

      .resume[data-theme="staff-software-engineering"] .resume-highlights li {
        gap: 0.045in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-section--skills .resume-entry {
        align-items: start;
        border-top: 0;
        display: grid;
        grid-template-columns: 1.15in minmax(0, 1fr);
        column-gap: 0.16in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-section--skills .resume-entry + .resume-entry {
        margin-top: 0.045in;
      }

      .resume[data-theme="staff-software-engineering"] .resume-skill-group h3 {
        color: var(--rf-color-muted);
        font-size: var(--rf-small-size);
        text-transform: uppercase;
      }

      .resume[data-theme="staff-software-engineering"] .resume-skills-list {
        columns: unset;
        display: grid;
        grid-template-columns: repeat(2, minmax(0, 1fr));
        margin-top: 0;
      }

      @media screen and (max-width: 560px) {
        .resume[data-theme="staff-software-engineering"] .resume-header,
        .resume[data-theme="staff-software-engineering"] .resume-entry-header,
        .resume[data-theme="staff-software-engineering"] .resume-entry-header > div,
        .resume[data-theme="staff-software-engineering"] .resume-section--skills .resume-entry,
        .resume[data-theme="staff-software-engineering"] .resume-skills-list {
          display: block;
        }

        .resume[data-theme="staff-software-engineering"] .resume-contact,
        .resume[data-theme="staff-software-engineering"] .resume-entry-meta {
          justify-items: start;
          text-align: left;
        }

        .resume[data-theme="staff-software-engineering"] .resume-contact .resume-separator {
          display: inline;
        }

        .resume[data-theme="staff-software-engineering"] .resume-entry-meta {
          justify-self: start;
          width: 100%;
        }
      }

      @media screen {
        .resume[data-theme="staff-software-engineering"] {
          min-height: var(--rf-page-height);
        }
      }


      @media screen {
        body {
          background: var(--rf-screen-background);
          padding: var(--rf-screen-padding);
        }

        .resume {
          box-shadow: var(--rf-screen-shadow);
        }
      }

      @media print {
        html,
        body {
          background: var(--rf-color-background);
        }

        body {
          padding: 0;
        }

        .resume {
          max-width: none;
          padding: 0;
        }
      }
    </style>
  </head>
  <body>
    <main class="resume" aria-label="Two Page Person resume" data-theme="staff-software-engineering" data-density="standard" data-page-size="letter" data-page-target="two-page">
      <header class="resume-header">
        <h1>Two Page Person</h1>
        <p class="resume-label">Staff Software Engineer</p>
        <address class="resume-contact" aria-label="Contact"><a href="mailto:two@example.com">two@example.com</a><span class="resume-separator" aria-hidden="true"> | </span><a href="tel:+15550200">+1 555 0200</a><span class="resume-separator" aria-hidden="true"> | </span><a href="https://two.example.com">two.example.com</a><span class="resume-separator" aria-hidden="true"> | </span><span>New York, NY</span></address>
        <p class="resume-summary">Builds durable systems across product engineering, data tooling, and developer platforms.</p>
      </header>
      <section id="experience" class="resume-section resume-section--experience" aria-labelledby="experience-heading" data-section-kind="experience">
        <h2 id="experience-heading">Experience</h2>

        <article id="durable-apps-staff" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Durable Apps</h3>
              <p class="resume-entry-meta"><span>Staff Software Engineer at Durable Apps</span><span class="resume-separator" aria-hidden="true"> | </span><span><time datetime="2021-04">2021-04</time><span aria-hidden="true"> - </span><span>Present</span></span></p>
            </div>

          </header>
          <p>Led platform work across authoring, validation, and publishing workflows.</p>
          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Designed reusable content models for multi-format publishing.</span></li><li><span class="resume-bullet" aria-hidden="true">•</span><span>Built validation reporting that mapped parser failures to source locations.</span></li></ul>
        </article>
        <article id="reliable-labs-senior" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Reliable Labs</h3>
              <p class="resume-entry-meta"><span>Senior Software Engineer at Reliable Labs</span><span class="resume-separator" aria-hidden="true"> | </span><span><time datetime="2018">2018</time><span aria-hidden="true"> - </span><time datetime="2021">2021</time></span></p>
            </div>

          </header>

          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Migrated legacy document templates to structured resume data.</span></li><li><span class="resume-bullet" aria-hidden="true">•</span><span>Added import warnings for compatibility formats with lossy fields.</span></li></ul>
        </article>
      </section>
      <section id="projects" class="resume-section resume-section--projects" aria-labelledby="projects-heading" data-section-kind="projects">
        <h2 id="projects-heading">Projects</h2>

        <article id="resume-foundry-parser" class="resume-entry">
          <header class="resume-entry-header resume-entry-header--with-link">
            <div>
              <h3>Resume Foundry</h3>
              <p class="resume-entry-meta"><span>Markdown/frontmatter parser</span></p>
            </div>
            <a class="resume-entry-link" href="https://github.com/aclyx/resume-foundry" aria-label="Resume Foundry link">github.com/aclyx/resume-foundry</a>
          </header>
          <p>Parses author-friendly resumes into a canonical typed schema.</p>
          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Supports structured metadata blocks for experience, education, projects, and skills.</span></li></ul>
        </article>
        <article id="projects-parser-notes" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Parser Notes</h3>

            </div>

          </header>
          <p>Documents the importer contract for author-friendly Markdown files.</p>
          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Shows that structured YAML blocks are optional for ordinary section items.</span></li></ul>
        </article>
      </section>
      <section id="education" class="resume-section resume-section--education" aria-labelledby="education-heading" data-section-kind="education">
        <h2 id="education-heading">Education</h2>

        <article id="example-university-bs" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Example University</h3>
              <p class="resume-entry-meta"><span>B.S. Computer Science at Example University</span><span class="resume-separator" aria-hidden="true"> | </span><span><time datetime="2014">2014</time><span aria-hidden="true"> - </span><time datetime="2018">2018</time></span></p>
            </div>

          </header>

          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Studied distributed systems and human-computer interaction.</span></li></ul>
        </article>
      </section>
      <section id="skills" class="resume-section resume-section--skills" aria-labelledby="skills-heading" data-section-kind="skills">
        <h2 id="skills-heading">Skills</h2>

        <article id="skills-languages" class="resume-entry resume-skill-group">
          <h3>Languages</h3>
          <ul class="resume-skills-list" aria-label="Languages skills">
            <li>TypeScript</li><li>Python</li><li>SQL</li>
          </ul>
        </article>
        <article id="skills-platforms" class="resume-entry resume-skill-group">
          <h3>Platforms</h3>
          <ul class="resume-skills-list" aria-label="Platforms skills">
            <li>Node.js</li><li>Postgres</li><li>GitHub Actions</li>
          </ul>
        </article>
      </section>
    </main>
  </body>
</html>"
`;

exports[`HTML presentation themes > renders a two-page baseline theme with selectable text links 1`] = `
"<!doctype html>
<html lang="en-US">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Two Page Example Resume</title>
    <style>
      :root {
        color-scheme: light;
        --rf-page-width: 210mm;
        --rf-page-height: 297mm;
        --rf-page-margin: 14mm;
        --rf-font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
        --rf-font-size: 10.5pt;
        --rf-small-size: 8.8pt;
        --rf-h1-size: 20pt;
        --rf-h2-size: 9.5pt;
        --rf-h3-size: 10.5pt;
        --rf-line-height: 1.35;
        --rf-heading-line-height: 1.12;
        --rf-regular-weight: 400;
        --rf-medium-weight: 600;
        --rf-bold-weight: 700;
        --rf-letter-spacing: 0;
        --rf-color-background: #ffffff;
        --rf-color-text: #111827;
        --rf-color-muted: #4b5563;
        --rf-color-subtle: #6b7280;
        --rf-color-accent: #0f766e;
        --rf-color-link: #0f766e;
        --rf-color-rule: #d1d5db;
        --rf-header-gap: 0.14in;
        --rf-contact-gap: 0.08in;
        --rf-section-title-gap: 0.08in;
        --rf-list-indent: 0.16in;
        --rf-section-gap: 0.18in;
        --rf-item-gap: 0.11in;
        --rf-list-gap: 0.025in;
        --rf-paragraph-gap: 0.045in;
        --rf-density-font-scale: 1;
        --rf-section-rule-width: 0.8pt;
        --rf-section-rule-style: solid;
        --rf-item-rule-width: 0;
        --rf-item-rule-style: solid;
        --rf-rule-radius: 0;
        --rf-screen-background: #f3f4f6;
        --rf-screen-padding: 24px;
        --rf-screen-shadow: 0 12px 30px rgb(15 23 42 / 0.12);
      }

      @page {
        size: 210mm 297mm;
        margin: 14mm;
      }

      * {
        box-sizing: border-box;
      }

      html,
      body {
        margin: 0;
        min-height: 100%;
        background: var(--rf-color-background);
      }

      body {
        color: var(--rf-color-text);
        font-family: var(--rf-font-family);
        font-size: calc(var(--rf-font-size) * var(--rf-density-font-scale));
        font-weight: var(--rf-regular-weight);
        line-height: var(--rf-line-height);
      }

      .resume {
        width: 100%;
        max-width: var(--rf-page-width);
        margin: 0 auto;
        padding: var(--rf-page-margin);
        background: var(--rf-color-background);
      }

      .resume[data-page-target="two-page"] {
        print-color-adjust: exact;
        -webkit-print-color-adjust: exact;
      }

      h1,
      h2,
      h3,
      p {
        margin: 0;
      }

      h1,
      h2,
      h3 {
        color: var(--rf-color-text);
        font-weight: var(--rf-bold-weight);
        letter-spacing: var(--rf-letter-spacing);
        line-height: var(--rf-heading-line-height);
      }

      h1 {
        font-size: var(--rf-h1-size);
      }

      h2 {
        border-bottom: var(--rf-section-rule-width) var(--rf-section-rule-style) var(--rf-color-accent);
        color: var(--rf-color-accent);
        font-size: var(--rf-h2-size);
        padding-bottom: var(--rf-section-title-gap);
        text-transform: uppercase;
      }

      h3 {
        font-size: var(--rf-h3-size);
      }

      a {
        color: var(--rf-color-link);
        text-decoration: underline;
        text-underline-offset: 0.08em;
      }

      address {
        font-style: normal;
      }

      ul {
        margin: var(--rf-paragraph-gap) 0 0;
        padding-left: var(--rf-list-indent);
      }

      li + li {
        margin-top: var(--rf-list-gap);
      }

      .resume-highlights {
        list-style: none;
        padding-left: 0;
      }

      .resume-highlights li {
        display: grid;
        gap: 0.055in;
        grid-template-columns: auto 1fr;
      }

      .resume-header {
        display: grid;
        gap: var(--rf-contact-gap);
        margin-bottom: var(--rf-header-gap);
      }

      .resume-label,
      .resume-contact,
      .resume-entry-meta,
      .resume-entry-link {
        color: var(--rf-color-muted);
      }

      .resume-summary,
      .resume-section-summary,
      .resume-entry p {
        margin-top: var(--rf-paragraph-gap);
      }

      .resume-section {
        break-inside: avoid-page;
        margin-top: var(--rf-section-gap);
      }

      .resume-section > h2 + * {
        margin-top: var(--rf-item-gap);
      }

      .resume-entry {
        break-inside: avoid-page;
        border-top: var(--rf-item-rule-width) var(--rf-item-rule-style) var(--rf-color-rule);
      }

      .resume-entry + .resume-entry {
        margin-top: var(--rf-item-gap);
      }

      .resume-entry-header {
        align-items: baseline;
        display: flex;
        gap: var(--rf-contact-gap);
        justify-content: space-between;
      }

      .resume-entry-meta,
      .resume-entry-link,
      .resume-contact {
        font-size: var(--rf-small-size);
      }

      .resume-skills-list {
        columns: 2;
        list-style-position: outside;
      }



      @media screen {
        body {
          background: var(--rf-screen-background);
          padding: var(--rf-screen-padding);
        }

        .resume {
          box-shadow: var(--rf-screen-shadow);
        }
      }

      @media print {
        html,
        body {
          background: var(--rf-color-background);
        }

        body {
          padding: 0;
        }

        .resume {
          max-width: none;
          padding: 0;
        }
      }
    </style>
  </head>
  <body>
    <main class="resume" aria-label="Two Page Person resume" data-theme="baseline" data-density="standard" data-page-size="a4" data-page-target="two-page">
      <header class="resume-header">
        <h1>Two Page Person</h1>
        <p class="resume-label">Staff Software Engineer</p>
        <address class="resume-contact" aria-label="Contact"><a href="mailto:two@example.com">two@example.com</a><span class="resume-separator" aria-hidden="true"> | </span><a href="tel:+15550200">+1 555 0200</a><span class="resume-separator" aria-hidden="true"> | </span><a href="https://two.example.com">two.example.com</a><span class="resume-separator" aria-hidden="true"> | </span><span>New York, NY</span></address>
        <p class="resume-summary">Builds durable systems across product engineering, data tooling, and developer platforms.</p>
      </header>
      <section id="experience" class="resume-section resume-section--experience" aria-labelledby="experience-heading" data-section-kind="experience">
        <h2 id="experience-heading">Experience</h2>

        <article id="durable-apps-staff" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Durable Apps</h3>
              <p class="resume-entry-meta"><span>Staff Software Engineer at Durable Apps</span><span class="resume-separator" aria-hidden="true"> | </span><span><time datetime="2021-04">2021-04</time><span aria-hidden="true"> - </span><span>Present</span></span></p>
            </div>

          </header>
          <p>Led platform work across authoring, validation, and publishing workflows.</p>
          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Designed reusable content models for multi-format publishing.</span></li><li><span class="resume-bullet" aria-hidden="true">•</span><span>Built validation reporting that mapped parser failures to source locations.</span></li></ul>
        </article>
        <article id="reliable-labs-senior" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Reliable Labs</h3>
              <p class="resume-entry-meta"><span>Senior Software Engineer at Reliable Labs</span><span class="resume-separator" aria-hidden="true"> | </span><span><time datetime="2018">2018</time><span aria-hidden="true"> - </span><time datetime="2021">2021</time></span></p>
            </div>

          </header>

          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Migrated legacy document templates to structured resume data.</span></li><li><span class="resume-bullet" aria-hidden="true">•</span><span>Added import warnings for compatibility formats with lossy fields.</span></li></ul>
        </article>
      </section>
      <section id="projects" class="resume-section resume-section--projects" aria-labelledby="projects-heading" data-section-kind="projects">
        <h2 id="projects-heading">Projects</h2>

        <article id="resume-foundry-parser" class="resume-entry">
          <header class="resume-entry-header resume-entry-header--with-link">
            <div>
              <h3>Resume Foundry</h3>
              <p class="resume-entry-meta"><span>Markdown/frontmatter parser</span></p>
            </div>
            <a class="resume-entry-link" href="https://github.com/aclyx/resume-foundry" aria-label="Resume Foundry link">github.com/aclyx/resume-foundry</a>
          </header>
          <p>Parses author-friendly resumes into a canonical typed schema.</p>
          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Supports structured metadata blocks for experience, education, projects, and skills.</span></li></ul>
        </article>
        <article id="projects-parser-notes" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Parser Notes</h3>

            </div>

          </header>
          <p>Documents the importer contract for author-friendly Markdown files.</p>
          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Shows that structured YAML blocks are optional for ordinary section items.</span></li></ul>
        </article>
      </section>
      <section id="education" class="resume-section resume-section--education" aria-labelledby="education-heading" data-section-kind="education">
        <h2 id="education-heading">Education</h2>

        <article id="example-university-bs" class="resume-entry">
          <header class="resume-entry-header">
            <div>
              <h3>Example University</h3>
              <p class="resume-entry-meta"><span>B.S. Computer Science at Example University</span><span class="resume-separator" aria-hidden="true"> | </span><span><time datetime="2014">2014</time><span aria-hidden="true"> - </span><time datetime="2018">2018</time></span></p>
            </div>

          </header>

          <ul class="resume-highlights"><li><span class="resume-bullet" aria-hidden="true">•</span><span>Studied distributed systems and human-computer interaction.</span></li></ul>
        </article>
      </section>
      <section id="skills" class="resume-section resume-section--skills" aria-labelledby="skills-heading" data-section-kind="skills">
        <h2 id="skills-heading">Skills</h2>

        <article id="skills-languages" class="resume-entry resume-skill-group">
          <h3>Languages</h3>
          <ul class="resume-skills-list" aria-label="Languages skills">
            <li>TypeScript</li><li>Python</li><li>SQL</li>
          </ul>
        </article>
        <article id="skills-platforms" class="resume-entry resume-skill-group">
          <h3>Platforms</h3>
          <ul class="resume-skills-list" aria-label="Platforms skills">
            <li>Node.js</li><li>Postgres</li><li>GitHub Actions</li>
          </ul>
        </article>
      </section>
    </main>
  </body>
</html>"
`;
